--- a/Proof.ipynb
+++ b/Proof.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMXMugb/sUJssH9zujED5ed",
+      "authorship_tag": "ABX9TyPXHEXkzhcBBvASE10BnMoT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,26 +31,44 @@
       "execution_count": 1,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 35
         },
         "id": "C7hgTv-Cdyvk",
-        "outputId": "4e88f790-3138-4926-fca0-945ea0224c39"
+        "outputId": "e0a1ca17-192e-41bb-af42-1b1a5da207a2"
       },
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "10"
-            ]
+              "'hi'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
           },
           "metadata": {},
           "execution_count": 1
         }
       ],
       "source": [
-        "5+5"
+        "5+5\n",
+        "\n",
+        "def hello():\n",
+        "  return 'hi'\n",
+        "\n",
+        "hello()"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# EDA"
+      ],
+      "metadata": {
+        "id": "_CV8Ef6WyJkS"
+      }
     },
     {
       "cell_type": "code",
@@ -60,6 +78,13 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "QhqmzQthyA2t"
+      }
     }
   ]
 }
